Updated layout related #1

--- a/index.css
+++ b/index.css
@@ -1,17 +1,22 @@
 #mainContainer{
   display:grid;
   grid-template-rows: 24% 24% 49%;
-  grid-row-gap: 1%;
+  grid-row-gap: 5px;
+
 
 }
-.container{
-  background-color: grey;
-  
+#mainContainer div{
+background-color: grey;
 }
 nav{
-   background-color: rgb(100, 145, 175, 0.8);
+
 }
 nav div{
   display: inline-block;
   font-size: 40px;
+}
+.containerGmail{
+  display:grid;
+  grid-template-rows: auto auto;
+  grid-row-gap: 5px;
 }
