--- a/github/github.css
+++ b/github/github.css
@@ -6,7 +6,7 @@
   width: 75%;
   margin: 0 auto;
   height: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .grid-item p{
   display: flex;
@@ -32,4 +32,12 @@
 .avatarInfo p{
   margin: 0;
   font-size: 55px;
+}
+.avatarInfo :nth-child(2){
+  margin: 0;
+  font-size: 40px;
+}
+.avatarInfo :nth-child(3){
+  margin: 0;
+  font-size: 70px;
 }
