--- a/index.css
+++ b/index.css
@@ -15,12 +15,8 @@ nav div{
   display: inline-block;
   font-size: 40px;
 }
-.containerGmail{
-  display:grid;
-  grid-template-rows: auto auto;
-  grid-row-gap: 5px;
-}
-.containerEmails{
+.containerInstagram{
   display: grid;
   grid-template-rows: auto auto;
+  grid-row-gap: 5px;
 }
