--- a/index.css
+++ b/index.css
@@ -1,26 +1,68 @@
-#mainContainer{
-  display:grid;
-  grid-template-rows: 24% 24% auto;
-  grid-row-gap: 5px;
-
-
+.body-container {
+  display: grid;
+  /* grid-template-columns: 1fr5; */
+  grid-template-rows: 5% 80% 15%;
+  grid-column-gap: 10%;
+  grid-row-gap: 1%;
+  /* justify-items: stretch; */
+  align-items: center;
 }
-#mainContainer div{
-background-color: grey;
-}
-nav{
 
+.nav-container {
+  display: grid;
+  grid-template-columns: 50% 35% auto;
+  width: 98%;
+  background-color: rgb(51, 73, 87);
+  position: fixed;
+  top: 0;
+  border-radius: 1%;
+  border: 2px solid #578698;
+  height: 5%;
 }
-nav div{
+
+nav text, label {
+  color: white;
+  font-size: 130%;
+}
+
+nav div {
   display: inline-block;
   font-size: 40px;
 }
-.containerGmail{
-  display:grid;
-  grid-template-rows: auto auto;
-  grid-row-gap: 5px;
+
+nav a {
+  color: inherit;
+  text-decoration: none;
 }
-.containerEmails{
+
+.mainContainer {
+  position: static;
+  height: 80%;
+  width: 80%;
+  top: 5%;
+  left: 10%;
+  background-color: #FFCC00;
+}
+
+.contacts-container {
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto 14% 14%;
+  grid-row-gap: 5px;
+  margin-top: 6%;
+  background-color: gray;
+  align-items: center;
+}
+
+.contacts {
+  position: absolute;
+  top:80%;
+  width: 100%;
+  background-color: gray;
+  align-items: center;
+}
+
+.avatar {
+  margin-left: 25%;
+  height: auto;
+  max-width: 40%;
 }
