--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -4,9 +4,7 @@
   grid-row-gap: 5px;
 }
 .searchContainer{
-
   display:grid;
-  display: grid;
   grid-template-rows: auto;
 }
 .resultsContainer{
@@ -40,6 +38,6 @@ input[type="submit"] {
   margin-top: -50px;
 }
 .postItem img{
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
 }
