--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -4,13 +4,17 @@
   grid-row-gap: 5px;
 }
 .searchContainer{
-  display:grid;
-  grid-template-rows: auto;
+display: flex;
+flex-direction: row;
+margin: 0 auto;
+margin-top: -80px;
 }
+
 .resultsContainer{
   display:grid;
   grid-template-rows: auto auto auto;
   grid-row-gap: 5px;
+  margin-top: -280px;
 }
 .resultsRow{
   width: 100%;
@@ -21,21 +25,19 @@
   justify-content: space-around;
 }
 input[type=text] {
-  width: 40%;
-  font-size: 75px;
-  padding: 12px 20px;
-  margin: 8px 20px;
-}
-input[type=text]:focus {
-  width: 85%;
-}
-input[type="submit"] {
-  width: 40%;
-  height: 80%;
+  width: 250px;;
   font-size: 55px;
-  padding: 12px 20px;
-  margin: 8px 20px;
-  margin-top: -50px;
+  border-radius: 15%;
+  margin-right: 15px;
+  /* padding: 12px 20px;
+  margin: 8px 20px; */
+}
+/* input[type=text]:focus {
+  width: 50%;
+} */
+input[type="submit"] {
+font-size: 55px;
+height: 70px;
 }
 .postItem img[alt="post"]{
   width: 300px;
