--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -7,14 +7,18 @@
 display: flex;
 flex-direction: row;
 margin: 0 auto;
-margin-top: -80px;
+margin-top: -10%;
+/* height: ; */
+}
+.searchContainer div{
+  height: 200px;
 }
 
 .resultsContainer{
   display:grid;
   grid-template-rows: auto auto auto;
   grid-row-gap: 5px;
-  margin-top: -280px;
+  margin-top: -75%;
 }
 .resultsRow{
   width: 100%;
