Increased the characters limit for photo description

--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -88,4 +88,8 @@ input[type="submit"] {
     width: 400px;
     height: 400px;
   }
+  .postItem :nth-child(3) {
+    font-size: 38px;
+    width: 25ch;
+  }
 }
