--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -70,6 +70,15 @@ input[type="submit"] {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+select{
+  height:70px;
+  width: 150px;
+  margin-left: 10px;
+  font-size: 34px;
+}
+select option{
+    font-size: 24px;
+}
 
 /* DESKTOP */
 @media screen and (min-width: 1100px){
