--- a/navBar/nav.css
+++ b/navBar/nav.css
@@ -1,33 +1,28 @@
 .nav-container {
   display: grid;
-  grid-template-columns: 35% 25% auto;
-  width: 98%;
-  background-color: rgba(51, 58, 64, 0.2);
+  grid-template-columns: 30% 23% 27% 14%;
+  grid-gap: 2%;
+
   position: fixed;
-  top: 1%;
+  width: 94%;
+
+  background-color: rgba(51, 58, 64, 0.2);
   border-radius: 25px;
   border: 2px solid #5b7282;
   padding: 2%;
-  width: 94%;
-  height: 3%;
-}
 
-nav text, label {
   font-family: Helvetica;
-  color: rgba(0, 0, 0, 0.4);
-  font-size: 110%;
+  color: ;
   text-shadow: 1px 2px 4px #000000;
 }
+
 
 nav div {
   display: inline-block;
-  font-size: 40px;
+  font-size: 45px;
 }
 
 nav a {
-  font-family: Helvetica;
   color: rgba(0, 0, 0, 0.4);
-  font-size: 120%;
-  text-shadow: 1px 2px 4px #000000;
   text-decoration: none;
 }
