--- a/instagram/instagram.css
+++ b/instagram/instagram.css
@@ -1,38 +1,36 @@
-.containerInstagram {
+.instagram-grid {
   display: grid;
-  grid-template-rows: auto auto;
-  grid-row-gap: 5px;
+  grid-template-rows: 5% 90%;
+  grid-row-gap: 5%;
+  align-items: center;
+  justify-content: center;
 }
 
-.searchContainer {
-  display: flex;
-  flex-direction: row;
+.search-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
   margin: 0 auto;
-  margin-top: -5%;
+  /* margin-top: -5%; */
 }
 
-.searchContainer div {
-  height: 200px;
-}
-
-.resultsContainer {
+.results-grid {
   display: grid;
-  grid-template-rows: auto auto auto;
-  grid-row-gap: 5px;
-  margin-top: -85%;
+  grid-template-rows: 100% 100%  100%;
+  grid-gap: 1%;
+  grid-column
 }
 
 .resultsRow {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-row-gap: 5px;
-  justify-content: space-around;
+  display: flex;
+  justify-content:center;
+  /* width: 100%; */
+  /* height: 100%; */
+  grid-row-gap: 5%;
+  /* justify-content: space-around; */
 }
 
 .postItem {
-  height: 200px;
+  max-height: 200px;
 }
 
 input[type=text] {
